--- a/src/assets/index.less
+++ b/src/assets/index.less
@@ -13,7 +13,7 @@
     .no-txn{font-size:80%;}
 }
 .block-list {
-   height: 400px; padding: .75rem 0; 
+   height: 440px; padding: .75rem 0; 
    
    .block-tab{height: 100%;;}
    .row-col{overflow: hidden;}
@@ -87,4 +87,13 @@
    } 
 }
 
+}
+
+
+.t-h-param{
+    margin-top: -1.25rem;
+  
+    .row{margin: 0 7.5px;}
+    .icon{width:1.625rem;height:1.625rem; margin-right:10px;}
+    .tab-css{padding: 1.25rem 0;}
 }
