--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -1,4 +1,5 @@
 *{margin:0; padding: 0;}
+h2{margin: 0px;padding:0px;}
 ul{
   margin:0 !important;  
 }
@@ -6,7 +7,7 @@ ul{
     font-weight: 400;
 }
 a{text-decoration: none;cursor:pointer;}
-a:hover{text-decoration: none !important;}
+a:hover{text-decoration: none !important; color:#3498db;}
 .wrapper {
     height: auto !important;
     height: 100%;
@@ -131,8 +132,16 @@ ul,li{list-style: none; }
     margin-left: -7.5px;
 }
 
-.card {
+.card,.tab-css {
+    -moz-box-shadow: 0 0.5rem 1.2rem rgba(189,197,209,.2);
+    -webkit-box-shadow: 0 0.5rem 1.2rem rgba(189,197,209,.2);
     box-shadow: 0 0.5rem 1.2rem rgba(189,197,209,.2);
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #e7eaf3;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    overflow: hidden;
 }
 .h-100 {
     height: 100%!important;
@@ -187,6 +196,8 @@ ul,li{list-style: none; }
     display: block;
     width: 100%;
 }
+
+
 
 
 .home-page-content{padding-bottom:2rem;}
@@ -255,5 +266,72 @@ a:hover{text-decoration:none;}
 .el-scrollbar__wrap{overflow-x: hidden;}
 
 
+.box-flex{
+    display:-webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex
+}
 
 
+
+.flex-between{
+-webkit-justify-content:space-between;
+justify-content:space-between;
+-moz-box-pack:space-between;
+-webkit--moz-box-pack:space-between;
+box-pack:space-between;
+}
+.flex-around{
+-webkit-justify-content:space-around;
+justify-content:space-around;
+-moz-box-pack:space-around;
+-webkit--moz-box-pack:space-around;
+box-pack:space-around;
+}
+.flex-center{
+    -webkit-justify-content:center;
+justify-content:center;
+-moz-box-pack:center;
+-webkit--moz-box-pack:center;
+box-pack:center;
+}
+
+.flex-middle{align-items:center;
+-webkit-align-items:center;
+box-align:center;
+-moz-box-align:center;
+-webkit-box-align:center;}
+.line-ellipsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
+white-space: nowrap;
+}
+.line-clamp2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+
+.clearfix:after{content:"";height:0;line-height:0;display:block;visibility:hidden;clear:both;}
+.clearfix{zoom:1;}
+
+.text-uppercase {
+    text-transform: uppercase!important;
+}
+.font-size-1 {
+    font-size: .71094rem!important;
+}
+.text-link {
+    color: #1e2022 !important;
+}
+a.text-link:hover{
+    color:#3498db !important;
+}
+.text-size-1 {
+    font-size: .9375rem;
+}
