--- a/src/assets/index.less
+++ b/src/assets/index.less
@@ -96,4 +96,5 @@
     .row{margin: 0 7.5px;}
     .icon{width:1.625rem;height:1.625rem; margin-right:10px;}
     .tab-css{padding: 1.25rem 0;}
+    .tran-box{margin: 0 1.75rem;}
 }
