--- a/src/assets/index.less
+++ b/src/assets/index.less
@@ -92,9 +92,10 @@
 
 .t-h-param{
     margin-top: -1.25rem;
-  
+    
     .row{margin: 0 7.5px;}
     .icon{width:1.625rem;height:1.625rem; margin-right:10px;}
-    .tab-css{padding: 1.25rem 0;}
+    .tab-css{padding: 1.25rem 0; position: relative;}
     .tran-box{margin: 0 1.75rem;}
+    .line{width:1px;height:50px;background:#e7eaf3; position: absolute;left:50%;margin-left: -.5px;top:50%; margin-top: -30px;}
 }
