事务列表页面

--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -476,6 +476,46 @@ button:focus {
     
 }
 
+.btn-icon.btn-xs {
+    font-size: .60938rem;
+    width: 1.21875rem;
+    height: 1.21875rem;
+}
+.btn-soft-success {
+    color: #00c9a7;
+    background: rgba(0,201,167,.1);
+    border-color: transparent;
+}
+.rounded-circle {
+    border-radius: 50%!important;
+}
+.btn-icon__inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.fa, .fas {
+    font-family: "Font Awesome 5 Pro";
+    font-weight: 900;
+}
+.fa, .fas {
+    font-weight: 900;
+}
+.btn-icon{position: relative;}
+
+.arrow-right{width:12px;height: 12px;display:block;background: url(../assets/img/arrow_right.png) center no-repeat;
+background-size:10px;-webkit-background-size: 10px;position: absolute; left:50%; margin-left: -5px;top:50%;margin-top: -6px;}
+
+.btn-icon:hover{
+    .arrow-right{width:12px;height: 12px;display:block;background: url(../assets/img/arrow_right1.png) center no-repeat;
+        background-size:10px;-webkit-background-size: 10px;
+    }
+}
+
+.fa-search{width:20px;height:19px;display:inline-block; vertical-align: top;
+background: url(../assets/img/icon_search.png) center no-repeat; background-size: contain; -webkit-background-size: contain;}
 
 @media(max-width:767px){
 
