--- a/src/assets/blocks.less
+++ b/src/assets/blocks.less
@@ -5,3 +5,28 @@
 
 .tran-time{white-space: nowrap;}
 
+.block-list-tab{ 
+    text-align: center;
+    .d-hash{width: 200px; margin: 0 auto;}
+}
+
+/*详情*/
+.detail-tab{
+    padding:.75rem;font-size:16px;
+    .lab{color:#1e2022;}
+    .mess-icon{width:14px;height: 14px;display: inline-block; vertical-align: middle;
+    background: url(../assets/img/icon_wh.png) center no-repeat; background-size: cover; -webkit-background-size: cover; margin-right:10px;}
+
+    .detail-col{padding-left: 7.5px; padding-right: 7.5px;}
+
+    .btncopy{display: inline-block; width:20px;height:20px; font-size:0px;
+      background: url(../assets/img/icon_copy.png) center no-repeat; background-size:20px;-webkit-background-size:20px; vertical-align: middle; margin-left:12px;
+    }
+    .btncopy-suc{
+        width: auto; padding-left: 18px;
+        background: url(../assets/img/icon_suc.png) left center no-repeat; background-size:16px;-webkit-background-size:16px;
+        font-size:14px;color: #8c98a4!important;
+    }
+
+}
+
