--- a/src/assets/blocks.less
+++ b/src/assets/blocks.less
@@ -10,6 +10,9 @@
     .d-hash{width: 200px; margin: 0 auto;}
 }
 
+.key-value-line1{max-width: 70%;}
+.key-value-hash{display: inline-block; max-width: 80%; vertical-align: middle;}
+
 /*详情*/
 .detail-tab{
     padding:.75rem;font-size:16px;
