--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -517,8 +517,14 @@ background-size:10px;-webkit-background-size: 10px;position: absolute; left:50%;
     }
 }
 
-.fa-search{width:20px;height:19ypx;display:inline-block; vertical-align: top;
+.fa-search{width:20px;height:19px;display:inline-block; vertical-align: top;
 background: url(../assets/img/icon_search.png) center no-repeat; background-size: contain; -webkit-background-size: contain;}
+
+
+.page-tilte{
+    padding-top: 1.25rem !important; padding-bottom: 1.25rem !important; border-bottom: 1px solid #e7eaf3; margin-bottom: 20px;
+}
+
 
 @media(max-width:767px){
 
