--- a/src/assets/blocks.less
+++ b/src/assets/blocks.less
@@ -33,3 +33,34 @@
 
 }
 
+
+/*点击地址*/
+.address-transaction-main{
+  .at-btn{width: 1.625rem;
+    height: 1.625rem; display: inline-block; vertical-align: middle; margin-left:5px;
+    border-radius:50%;-moz-border-radius:50%;-webkit-border-radius:50%;overflow:hidden;
+    cursor: pointer;
+    }
+    .at-btn-copy{
+        background:#EBEDF0 url(../assets/img/at_copyn.png) center  no-repeat;
+        margin-left: 8px;
+    }
+    .at-btn-see{
+        background:#EBEDF0 url(../assets/img/at_coden.png) center  no-repeat;
+    }
+    .at-btn-copy:hover{
+        background:#7B8895 url(../assets/img/at_copyh.png) center  no-repeat;
+    }
+    .at-btn-see:hover{    
+        background:#7B8895 url(../assets/img/at_codeh.png) center  no-repeat;
+    }
+
+    .btn-copy-suc{
+        background:#7B8895 url(../assets/img/icon_suc1.png) center  no-repeat;
+    }
+    .btn-copy-suc:hover{
+        background:#7B8895 url(../assets/img/icon_suc1.png) center  no-repeat;
+    }
+
+}
+
