新增地址事务

--- a/src/assets/blocks.less
+++ b/src/assets/blocks.less
@@ -47,6 +47,7 @@
     }
     .at-btn-see{
         background:#EBEDF0 url(../assets/img/at_coden.png) center  no-repeat;
+        em{display:block;width:100%;height:100%;}
     }
     .at-btn-copy:hover{
         background:#7B8895 url(../assets/img/at_copyh.png) center  no-repeat;
@@ -62,5 +63,34 @@
         background:#7B8895 url(../assets/img/icon_suc1.png) center  no-repeat;
     }
 
+    .com-table{
+        .line1{display:block;}
+    }
+
+    .col-balance{text-align: right;}
+
+    .transType{
+      font-size: .60938rem;
+      line-height: 1.7;
+      width:30px;height:24px; display: block; text-align: center;
+      font-weight:700;
+      -moz-border-radius:4px;border-radius:4px;-webkit-border-radius:4px;
+    }
+
+    .type-out{
+      color: #b47d00;
+      background-color: rgba(219,154,4,.2);
+    }
+
+    .type-in{
+    color: #02977e;
+       background-color: rgba(0,201,167,.2);
+    }
+
+}
+
+#qrcode{
+    text-align: center; width:235px;height:235px; margin: 0 auto;
+    img{margin:0 auto;}
 }
 
