--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -526,6 +526,21 @@ background: url(../assets/img/icon_search.png) center no-repeat; background-size
 }
 
 
+.el-dialog__title{
+    width: 80%;display: block; margin: 0 auto;
+    word-break: break-all; font-size:14px;
+}
+.el-dialog_wrapper .dialog-fade-leave-active{
+    animation-fill-mode:forwards;
+}
+
+.code-modal-dialog{
+    .close{position:absolute; right:20px; top:8px}
+    .modal-header{border: 0 none !important; padding: 0px !important;}
+    .code-address{width:80%;margin:0 auto;padding: 1rem 0;}
+}
+.modal{z-index: 999999 !important;}
+
 @media(max-width:767px){
 
     
