事务提示框样式修改

--- a/src/assets/blocks.less
+++ b/src/assets/blocks.less
@@ -1,4 +1,4 @@
-.tds-block-main{padding-bottom: 3.25rem;}
+.tds-block-main{padding-bottom: 3.25rem; min-height: 629px;}
 .wrapper{height:100vh !important; overflow-y: auto !important;}
 
 .tds-trans-table td a{display:block}
