--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -342,6 +342,11 @@ white-space: nowrap;
 .clearfix:after{content:"";height:0;line-height:0;display:block;visibility:hidden;clear:both;}
 .clearfix{zoom:1;}
 
+
+button{
+
+}
+
 @media (min-width: 1400px){
 .container {
     max-width: 1270px;
@@ -376,16 +381,25 @@ a.text-link:hover{
 }
 
 button {
-    border: 0 none;
-    background: #5B88ED;
+    border:0 none !important;
+    background: #3498db;;
     border-radius: 5px;
     outline: none;
 }
 
 /*取消button点击的默认样式*/
-button:focus {
-    border: 0 none;
-    outline: none;
+.input-group{
+    button:focus {
+        border: 0 none !important;
+        outline: none !important;
+        box-shadow: 0 none;
+        -webkit-box-shadow: 0 none;
+    }
+    .btn-primary.focus, .btn-primary:focus{
+
+      -webkit-box-shadow:none !important;
+       box-shadow:noe !important;
+    }
 }
 
 .page-title{
@@ -556,6 +570,7 @@ background: url(../assets/img/icon_search.png) center no-repeat; background-size
     .close{position:absolute; right:20px; top:8px}
     .modal-header{border: 0 none !important; padding: 0px !important;}
     .code-address{width:80%;margin:0 auto;padding: 1rem 0;}
+    .modal-body{padding-bottom: 40px !important;}
 }
 .modal{z-index: 999999 !important;}
 
