--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -571,6 +571,7 @@ background: url(../assets/img/icon_search.png) center no-repeat; background-size
     .modal-header{border: 0 none !important; padding: 0px !important;}
     .code-address{width:80%;margin:0 auto;padding: 1rem 0;}
     .modal-body{padding-bottom: 40px !important;}
+    .close:focus{border:0 none !important;outline: none !important;}
 }
 .modal{z-index: 999999 !important;}
 
