--- a/src/assets/blocks.less
+++ b/src/assets/blocks.less
@@ -94,3 +94,51 @@
     img{margin:0 auto;}
 }
 
+
+/*合约详情页面*/
+.contract-hash-detail{
+   .hr-space{margin:.5rem 15px}
+   
+}
+
+.contract-tab-box{
+    margin-top:1rem;
+    
+    .tab-nav{ height:44px; position: relative; border-bottom: 1px solid #e7eaf3;}
+    .navbox{position: absolute; width:100%;height:45px;left:0px;bottom: -1px;}
+    .tab-nav a{display:inline-block; line-height: 44px; height:44px;cursor: pointer; color:#505964 !important; font-size:0.8125rem;
+    padding: 0 1rem;border-bottom: 2px solid transparent; position: relative;}
+
+    .tab-nav a.active{color:#3498db !important;border-bottom:2px solid #3498db;}
+    .s-verified{width:13px;height:13px;display:block; position: absolute; right:0px; top:.3rem;
+       background: url(../assets/img/verified.png) center no-repeat;
+    }
+}
+
+
+.contract-params{
+  padding: .75rem;
+  .param-title{color:#4a4f55; font-size:.8125rem; padding: .75rem 0; position: relative;}
+  .param-col{padding-bottom:.2rem;}
+  .param-col1{
+      span{background: url(../assets/img/code1.jpg) left center no-repeat; padding-left: 20px;}
+  }
+  .param-col2{
+    span{background: url(../assets/img/code2.jpg) left center no-repeat; padding-left: 20px;}
+  }
+  .param-col3{
+    span{background: url(../assets/img/code3.jpg) left center no-repeat; padding-left: 20px;}
+  }
+  
+  .functionBox{
+    position: absolute; right:0px; top:50%; margin-top: -15px; 
+    overflow: hidden;
+    .fun-btn{width:30px;height:30px;display:inline-block; vertical-align: middle;
+        border-radius:3px;-webkit-border-radius:3px; -moz-border-radius:3px;
+    }
+    .fun-btn.copy{background:#77838f url(../assets/img/fuzhi.png) center no-repeat;}
+    .fun-btn.qp{background:#77838f url(../assets/img/quanping.png) center no-repeat; margin-right:10px;} 
+    .fun-btn.bp{background:#77838f url(../assets/img/quanping.png) center no-repeat; margin-right:10px;} 
+ }
+
+}
