--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -442,7 +442,7 @@ button {
 
 .ntab-hash{width:200px}
 .d-hash{
-    width:180px;
+    width:160px;
     a{display:block;}
 }
 
@@ -580,6 +580,48 @@ background: url(../assets/img/icon_search.png) center no-repeat; background-size
   font-size:12px;
   max-width:400px;
 }
+
+/*合约详情*/
+.contract-detail-main{
+    .page-tilte{margin-bottom:0px;}
+}
+
+.contract-hash-detail{
+    .lab{white-space:nowrap;}
+    .row-detail > .col-md-6 {padding-left: 7.5px !important; padding-right:7.5px !important; margin-top: 1rem;}
+    .tab-css > .row{ margin-left:0px; margin-right: 0px;}
+    .tab-css{padding: .5rem 0;min-height: 124px;}
+}
+
+
+.no_wrap{white-space: nowrap;}
+
+
+
+pre{
+    padding: .75rem;
+    border: 1px solid #e7eaf3;
+    background-color: #f8f9fa;
+    border-radius: .35rem;
+    margin-bottom: .5rem;
+}
+pre {
+    resize:both;
+    /* overflow: auto; */
+}
+.wordwrap {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+}
+
+.ace-tm{background:#f9f9f9 !important;}
+.ace-tm .ace_marker-layer .ace_active-line {
+    background: rgba(36, 99, 180, 0.12) !important;
+}
+
+
 
 
 @media(max-width:767px){
