--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -616,8 +616,8 @@ pre {
     word-wrap: break-word;
 }
 
-.ace-tm{background:#f9f9f9 !important;}
-.ace-tm .ace_marker-layer .ace_active-line {
+.ace-chrome{background:#f9f9f9 !important;}
+.ace-chrome .ace_marker-layer .ace_active-line {
     background: rgba(36, 99, 180, 0.12) !important;
 }
 
