--- a/src/assets/blocks.less
+++ b/src/assets/blocks.less
@@ -138,7 +138,7 @@
     }
     .fun-btn.copy{background:#77838f url(../assets/img/fuzhi.png) center no-repeat;}
     .fun-btn.qp{background:#77838f url(../assets/img/quanping.png) center no-repeat; margin-right:10px;} 
-    .fun-btn.bp{background:#77838f url(../assets/img/quanping.png) center no-repeat; margin-right:10px;} 
+    .fun-btn.bp{background:#77838f url(../assets/img/banping.png) center no-repeat; margin-right:10px;} 
  }
 
 }
