--- a/src/assets/blocks.less
+++ b/src/assets/blocks.less
@@ -152,7 +152,7 @@
 .contract-params-form{/*width:80%; margin:0 auto;*/}
 .din-address{width:80%; border: 1px solid #e7eaf3;
     background-color: #f8f9fa; padding: .75rem;-webkit-border-radius:.35rem;-moz-border-radius:.35rem; border-radius:.35rem;
-   input{border:0 none;background:0 none;font-size:0.8125rem;}
+   input{border:0 none;background:0 none;font-size:0.8125rem; width: 100%;}
 }
 .verify-title{text-align: center; width:100%;}
 .verify-title .pt{color:#4a4f55; font-size: 18px; margin-bottom: 0px; text-align: center; width:100%;}
