--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -467,9 +467,9 @@ button:focus {
           position: relative;
           vertical-align: middle;
          padding: 12px 10px;
-         padding-right: 30px;
+       
        }
-       .tab-th{position: relative;}
+       .tab-th{position: relative;  padding-right: 30px;}
        .b-tran-num{width: 15%;}
     }
     
@@ -681,3 +681,6 @@ outline: none !important; box-shadow:none !important;
    
 }
 }
+
+
+.contract-table tr td,.contract-table tr th{ padding-right: 10p;;}
