--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -450,6 +450,7 @@ button:focus {
 .d-hash{
     width:160px;
     a{display:block;}
+    > span{display: block;}
 }
 
 .com-table-box{overflow-x: auto;}
