--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -1,7 +1,7 @@
-*{margin:0; padding: 0;}
+*{margin:0; padding: 0;word-break:break-all;}
 h2{margin: 0px;padding:0px;}
 ul{
-  margin:0 !important;  
+  margin:0 !important;
 }
 .h4, .h5, .h6, h4, h5, h6 {
     font-weight: 400;
@@ -58,7 +58,7 @@ ul,li{list-style: none; }
       a:hover{color: #3498db!important;}
       li.active a{color: #3498db!important;}
     }
-    
+
 }
 
 .h-bg-dark{
@@ -190,7 +190,7 @@ ul,li{list-style: none; }
 }
 .btn-soft-primary:hover{
    background-color: #3498db !important;
-   
+
     color:#fff !important;
 }
 .btn-block {
@@ -210,10 +210,10 @@ ul,li{list-style: none; }
     height: 2.53906rem; text-align: center; line-height: 2.53906rem;
     padding: 0;
     display: inline-block; vertical-align: middle;
-    
+
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
-   
+
     border-radius:5px;
 }
 
@@ -267,19 +267,19 @@ ul,li{list-style: none; }
     border-right-color:  #21325b !important;
 }
 
-.tooltip.bs-tooltip-top .arrow::before {  
+.tooltip.bs-tooltip-top .arrow::before {
  border-top-color: #21325b !important;}
-.tooltip.bs-tooltip-right .arrow::before {     
+.tooltip.bs-tooltip-right .arrow::before {
  border-right-color: #21325b !important;}
-.tooltip.bs-tooltip-left .arrow::before {     
+.tooltip.bs-tooltip-left .arrow::before {
   border-left-color: #21325b !important;}
-.tooltip.bs-tooltip-bottom .arrow::before { 
+.tooltip.bs-tooltip-bottom .arrow::before {
   border-bottom-color: #21325b !important;}
 
 /*滚动条样式*/
 .os-scrollbar-handle{visibility:hidden;cursor: pointer;}
 .block-list:hover .os-scrollbar-handle{
-visibility: visible;   
+visibility: visible;
 }
 
 a{color:#3498db !important;}
@@ -420,7 +420,7 @@ button:focus {
     text-align:right;
     overflow-x: auto;
     .el-pagination__sizes{float:left;}
-   
+
 
 }
 .el-popper{
@@ -468,12 +468,12 @@ button:focus {
           position: relative;
           vertical-align: middle;
          padding: 12px 10px;
-       
+
        }
        .tab-th{position: relative;  padding-right: 30px;}
        .b-tran-num{width: 15%;}
     }
-    
+
     .caret-wrapper {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -493,7 +493,7 @@ button:focus {
     position: absolute;
     top:50%; margin-top: -15px;
 }
-    
+
      .sort-caret.ascending {
     border-bottom-color: #C0C4CC;
     top: 5px;
@@ -515,7 +515,7 @@ button:focus {
     .descending .sort-caret.descending {
         border-top-color: #409EFF;
     }
-    
+
 }
 
 .btn-icon.btn-xs {
@@ -614,7 +614,7 @@ pre{
 }
 pre {
     //resize:vertical;
-    overflow: auto; 
+    overflow: auto;
     -webkit-resize: vertical;
   -moz-resize: vertical;
   -o-resize: vertical;
@@ -640,7 +640,7 @@ pre {
 .btn.focus,
 .btn:active.focus,
 .btn.active.focus {
-outline: none !important; box-shadow:none !important; 
+outline: none !important; box-shadow:none !important;
 }
 
 .contract-params-form{
@@ -665,21 +665,21 @@ outline: none !important; box-shadow:none !important;
 
 @media(max-width:767px){
 
-    
+
 
    .h-header .navbar-nav{display: block;}
    .h-header .navbar-nav li{display:block; padding-left: 20px;}
    .h-header{
        .navbar-toggler{padding: 0px; border: 0 none;}
-       .navbar-toggler .navbar-toggler-icon{background: url(../assets/img/icon_menu.png) center no-repeat !important; 
+       .navbar-toggler .navbar-toggler-icon{background: url(../assets/img/icon_menu.png) center no-repeat !important;
     background-size:1.2em;-webkit-background-size:1.2em;
 
    }
-   .navbar-toggler:hover .navbar-toggler-icon{background: url(../assets/img/icon_menu1.png) center no-repeat !important; 
+   .navbar-toggler:hover .navbar-toggler-icon{background: url(../assets/img/icon_menu1.png) center no-repeat !important;
     background-size:1.2em;-webkit-background-size:1.2em;
 
    }
-   
+
 }
 }
 
