--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -62,7 +62,7 @@ ul,li{list-style: none; }
 }
 
 .h-bg-dark{
-    background-image: url(abstract-shapes-20.svg); background-color:#21325b ;
+    background-image: url(img/background.png); background-color:#21325b ;
      padding-top: 3.25rem!important;padding-bottom: 4.5rem!important;
 }
 .custom-arrow-select {
