--- a/src/assets/custom.less
+++ b/src/assets/custom.less
@@ -691,3 +691,6 @@ outline: none !important; box-shadow:none !important;
 
 .el-tooltip__popper{word-break: break-word;}
 .tooltip-inner{word-break: break-word;}
+
+.right_home_tab{margin-left: 15px;}
+.title_tab{white-space: nowrap;}
